# triton-rs

./: .gitmodules
triton-rs/: Cargo.toml
triton-rs/src/: lib.rs  model.rs  request.rs
triton-sys/: Cargo.toml  build.rs
